# kanade-tts

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
plans/flow-matching/: plan.md
plans/kanade-tokenizer/: model_001.md
scripts/: prepare_dataset.py  prepare_metadata.py  train_infer.sh  train_prepare.sh  train_resume.sh  train_scratch.sh
src/: checkpoint.py  config.py  data.py  eval.py  infer.py  metrics.py  model.py  optimizer.py  tokenization.py  train.py
